[gd_scene load_steps=2 format=3 uid="uid://dgameover00001"]

[ext_resource type="Script" path="res://scripts/ui/game_over.gd" id="1_script"]

[node name="GameOver" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TimeLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Time Survived: 00:00"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Level Reached: 1"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Enemies Killed: 0"
horizontal_alignment = 1

[node name="CreditsLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "⟐ Intergalactic Space Credits Earned: 0"
horizontal_alignment = 1

[node name="StardustLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "✦ Stardust Earned: 0"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="RetryButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Retry"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Main Menu"
